fixed some alignment issues

--- a/css/queries.css
+++ b/css/queries.css
@@ -5,8 +5,7 @@
 
   .about-grid {
     grid-template-columns: 4fr 1fr;
-    column-gap: 4rem;
-    align-items: start;
+    column-gap: 3.2rem;
   }
 
   .about-text {
@@ -14,12 +13,32 @@
   }
 
   .about-img-grid {
-    justify-self: auto;
+    /* height: 100%; */
+    /* justify-self: center; */
     grid-template-columns: 1fr;
+    padding: 1.6rem;
   }
 
   .timeline-grid {
     padding: 4.8rem 4.4rem;
+  }
+
+  .education-icon {
+    border: 0.3rem solid #507d7f;
+    transform: translate(50%, -50%);
+  }
+  .education-icon-checked {
+    border: 0.3rem solid #507d7f;
+    transform: translate(140%, -50%);
+  }
+  .education-icon-unchecked {
+    border: 0.3rem solid #aaa;
+    transform: translate(140%, -50%);
+  }
+
+  .education-description-box ion-icon,
+  .education-info-box ion-icon {
+    --ionicon-stroke-width: 50px;
   }
 }
 
@@ -41,5 +60,14 @@
 @media (max-width: 34em) {
   html {
     font-size: 50%;
+  }
+
+  .heading-secondary {
+    font-size: 2rem;
+  }
+
+  .heading-tertiary {
+    letter-spacing: -1;
+    font-size: 1.8rem;
   }
 }
