--- a/css/style.css
+++ b/css/style.css
@@ -132,8 +132,8 @@ body {
 .about-grid {
   display: grid;
   grid-template-columns: 4fr 3fr;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center; */
+  column-gap: 4.4rem;
   padding: 0;
   margin: 0;
 }
@@ -149,14 +149,15 @@ body {
 }
 
 .about-img-grid {
+  align-self: center;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1.6rem;
-  padding: 1.6rem;
+  /* padding: 1.6rem; */
 }
 
 .about-img {
-  /* display: block; */
+  display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -210,37 +211,29 @@ body {
   z-index: 1;
 }
 
-.education-icon-checked {
-  top: 0;
+.education-icon-checked,
+.education-icon-unchecked {
+  top: 50%;
   right: 0%;
-  transform: translate(142%, 100%);
-  transform: translate(142%, 100%);
+  transform: translate(142%, -50%);
   position: absolute;
 
-  color: #507d7f;
   background-color: #fff;
   height: 2.4rem;
   width: 2.4rem;
   border-radius: 50%;
-  border: 0.2rem solid #507d7f;
   padding: 0.4rem;
   z-index: 1;
 }
 
-.education-icon-unchecked {
-  top: 0;
-  right: 0%;
-  transform: translate(142%, 100%);
-  position: absolute;
+.education-icon-checked {
+  color: #507d7f;
+  border: 0.2rem solid #507d7f;
+}
 
+.education-icon-unchecked {
   color: rgb(212, 212, 212);
-  background-color: #fff;
-  height: 2.4rem;
-  width: 2.4rem;
-  border-radius: 50%;
   border: 0.2rem solid #aaa;
-  padding: 0.4rem;
-  z-index: 1;
 }
 
 .education-info-box {
